force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ReopenDecisionDateTimeTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReopenDecisionDateTimeTime__c</fullName>
    <label>Reopen Decision Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReopenDecisionDateTimeTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>