force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ReopenReasonID__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReopenReasonID__c</fullName>
    <label>Reopen Reason</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReopenReasonID</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>