force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__RequestDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestDueDateTime__c</fullName>
    <label>Request Due Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestDueDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>