force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__RequesterType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequesterType__c</fullName>
    <label>Requester Type</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequesterType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>