force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__RequestingPractitionerObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestingPractitionerObject__c</fullName>
    <label>Requesting Practitioner Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestingPractitionerObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>