force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ResolutionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResolutionDateTime__c</fullName>
    <label>Resolution Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResolutionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>