force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ResolutionLetterSentDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResolutionLetterSentDateTime__c</fullName>
    <label>Resolution Letter Sent Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResolutionLetterSentDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>