force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__RqstPrctnrVerbalNtfyDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RqstPrctnrVerbalNtfyDateTime__c</fullName>
    <label>Request Prctnr Verbal Ntfy Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RqstPrctnrVerbalNtfyDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>