force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ScheduledAdmissionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScheduledAdmissionDateTime__c</fullName>
    <label>Scheduled Admission Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScheduledAdmissionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>