force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ServiceLevelType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceLevelType__c</fullName>
    <label>Service Level Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceLevelType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>