force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ServicingFacilityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicingFacilityId__c</fullName>
    <label>Servicing Facility</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicingFacilityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>