force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__ServicingPractitionerSpecialty__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicingPractitionerSpecialty__c</fullName>
    <label>Servicing Practitioner Specialty</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicingPractitionerSpecialty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>