force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__SubscriberMemberIdentifierText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriberMemberIdentifierText__c</fullName>
    <label>Subscriber Member Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriberMemberIdentifierText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>