force-app/main/default/objects/ssot__CareRequest__dlm/fields/ssot__UnitofMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__UnitofMeasureId__c</fullName>
    <label>Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UnitofMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>